# VMG1312-B10A

./: Makefile  README.md  make.common  make.modsw  make.voice  version.make
bcmdrivers/: Makefile
hostTools/: CompressConfig  NANDimg_gen  addvtoken  bcmZyNandImageBuilder  cmplzma  createZyNandimg  mkfs.jffs2
hostTools/fakeroot/: Makefile  config.status  libtool
hostTools/fakeroot/doc/: Makefile
hostTools/fakeroot/scripts/: Makefile
hostTools/fakeroot/test/: Makefile
hostTools/libcreduction/: Makefile
hostTools/scripts/: defconfig-bcm.template  gendefconfig
kernel/linux/: Makefile
kernel/linux/fs/: binfmt_elf.c  exec.c  read_write.c
kernel/linux/kernel/: bcm_log.c  module.c  printk.c  sched.c  sysctl_check.c
kernel/linux/mm/: memory.c
kernel/linux/mstc_zlib/: Makefile  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  gzio.c  inffast.c  inflate.c  inftrees.c  trees.c  uncompr.c  zutil.c
shared/opensource/flash/: Makefile  cfiflash.c  flash_api.c  flash_common.c  nandflash.c  spiflash.c
shared/opensource/spi/: Makefile  bcmHsSpi.c  bcmLegSpi.c  bcmSpiRes.c
shared/opensource/utils/: Makefile  shared_utils.c
targets/: buildFS  buildFS2  makeDevs
targets/VMG1312-B10A/: VMG1312-B10A
targets/arch/: BONDING5B.arch  GINP.arch  JUMBO.arch  NOFAP.arch  SRTP.arch  WL11AC.arch
targets/defaultcfg/: 100AAJZ_TE.rom  VMG1312-B10A.rom
targets/definitions/: profiles
targets/fs.src/etc/: KeepAlive.sh  fw_wwanpackage  mdev.conf  profile  zyusb_insmod.sh  zyusbinit.sh
userspace/: Makefile
userspace/MSTC/ZyIMS/: Makefile
userspace/gpl/apps/: Makefile  dnsmasq.tar.bz2  ez-ipupdate.tar.bz2  iptables.tar.bz2  ndisc6.tar.bz2  radvd.tar.bz2  wpa_supplicant.conf
userspace/gpl/apps/conntrack/conntrack-tools-0.9.14/: Make_global.am  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.in  conntrack.8  conntrackd.8  libtool
userspace/gpl/apps/conntrack/conntrack-tools-0.9.14/doc/manual/: conntrack-tools.html  conntrack-tools.tmpl
userspace/gpl/apps/conntrack/conntrack-tools-0.9.14/doc/stats/: conntrackd.conf  conntrackd.conf.orig
userspace/gpl/apps/conntrack/conntrack-tools-0.9.14/doc/sync/: keepalived-multi1.conf  keepalived-multi2.conf  multiprimary.sh  primary-backup.sh
userspace/gpl/apps/conntrack/conntrack-tools-0.9.14/doc/sync/alarm/: conntrackd.conf  conntrackd.conf.orig  conntrackd.conf.rej
userspace/gpl/apps/conntrack/conntrack-tools-0.9.14/doc/sync/ftfw/: conntrackd.conf  conntrackd.conf.orig
userspace/gpl/apps/conntrack/conntrack-tools-0.9.14/doc/sync/notrack/: conntrackd.conf
userspace/gpl/apps/conntrack/conntrack-tools-0.9.14/extensions/: Makefile  Makefile.in  libct_proto_dccp.c  libct_proto_gre.c  libct_proto_icmp.c  libct_proto_icmpv6.c  libct_proto_sctp.c  libct_proto_tcp.c  libct_proto_udp.c  libct_proto_udplite.c
userspace/gpl/apps/conntrack/conntrack-tools-0.9.14/extensions/.deps/: libct_proto_dccp.Plo  libct_proto_gre.Plo  libct_proto_icmp.Plo  libct_proto_icmpv6.Plo  libct_proto_sctp.Plo  libct_proto_tcp.Plo  libct_proto_udp.Plo  libct_proto_udplite.Plo  libct_proto_unknown.Plo
userspace/gpl/apps/conntrack/conntrack-tools-0.9.14/include/: Makefile  Makefile.am  Makefile.in  bitops.h  cache.h  channel.h  conntrack.h  conntrackd.h  external.h  fds.h  filter.h  internal.h  local.h  log.h  mcast.h  netlink.h  network.h  tcp.h  udp.h
userspace/gpl/apps/conntrack/conntrack-tools-0.9.14/src/: Makefile  Makefile.am  Makefile.in  build.c  cache.c  cache_iterators.c  channel.c  channel_tcp.c  conntrack.c  external_cache.c  external_inject.c  fds.c  filter.c  internal_bypass.c  internal_cache.c  local.c  log.c  main.c  multichannel.c  netlink.c  network.c  parse.c  process.c  read_config_lex.l  read_config_yy.h  read_config_yy.y  run.c  stats-mode.c  sync-alarm.c  sync-ftfw.c  sync-mode.c  sync-notrack.c  tcp.c  udp.c
userspace/gpl/apps/conntrack/conntrack-tools-0.9.14/src/.deps/: alarm.Po  build.Po  cache.Po  cache_iterators.Po  cache_timer.Po  channel.Po  channel_mcast.Po  channel_tcp.Po  channel_udp.Po  cidr.Po  conntrack.Po  date.Po  event.Po  external_cache.Po  external_inject.Po  fds.Po  filter.Po  hash.Po  internal_bypass.Po  internal_cache.Po  local.Po  log.Po  main.Po  mcast.Po  multichannel.Po  netlink.Po  network.Po  origin.Po  parse.Po  process.Po  queue.Po  rbtree.Po  read_config_lex.Po  read_config_yy.Po  run.Po  stats-mode.Po  sync-alarm.Po  sync-ftfw.Po  sync-mode.Po  sync-notrack.Po  (+4 more)
userspace/gpl/apps/mailsend/: ChangeLog  Makefile  Makefile.in  Makefile.win  TODO  aclocal.m4  config.status  configure  configure.in  mailsend.h  main.c  setget.c  smtp.c  utils.c
userspace/gpl/apps/mailsend/libs/libmsock/: Makefile  makefile.wnt  makefile.wnt~  msock.c  msock.c~  msock.h  msock.h~
userspace/gpl/apps/mailsend/libs/libmutils/: Makefile  Makefile.in  Makefile.in~  Makefile~  makefile.wnt~  mime.c  mutils.c  mutils.c~  mutils.h  mutils.h~  string.c
userspace/gpl/apps/mailsend/libs/libsll/: Makefile  makefile.wnt~
userspace/gpl/apps/wput/: ChangeLog  INSTALL  Makefile  Makefile.in  TODO  config.status  configure  configure.in  wput-log
userspace/gpl/apps/wput/doc/: USAGE.examples  USAGE.resumehandling  USAGE.urlhandling  passwordfile  wputrc
userspace/gpl/apps/wput/po/: LINGUAS  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  de.gmo  de.po  it.gmo  it.po  wput.pot
userspace/gpl/apps/wput/src/: Makefile  Makefile.in  _queue.h  config.h  config.h.in  constants.h  ftp-ls.c  ftp.c  ftp.h  ftplib.c  ftplib.h  memdbg.c  netrc.c  netrc.h  progress.c  progress.h  queue.c  socketlib.c  socketlib.h  utils.c  utils.h  wget.h  windows.h  wput.c  wput.h  wput.kateproject
userspace/gpl/apps/wput/src/getopt/: getopt.c  getopt.h
userspace/gpl/apps/wput/src/msvcpp/: config.h.ms  strptime.c  wput.dsp  wput.dsw
userspace/gpl/libs/: Makefile  libiconv.tar.bz2
userspace/private/: Makefile
userspace/private/apps/: Makefile  VMG1312_x_dms.tar.bz2  omcid96816GW.save  omcid96816GWO.save  omcid96816GWO_UNI.save  omcid96816GW_UNI.save  omcid96816O.save  omcid96816O_UNI.save
(+2923 files in other folders)
